--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -16,7 +16,12 @@ add_executable(tests
 add_executable(beispiel
   beispiel.cpp)
 add_executable(aufgabe2bis4
-  aufgabe2bis4.cpp)	
+  aufgabe2bis4.cpp)
+target_link_libraries(example
+  m
+  )
+add_executable(aufgabe5
+  aufgabe5.cpp)	
 target_link_libraries(tests
   ${GLFW_LIBRARIES})
 
